syntax = "proto3";
package milkyway.restaking.legacy;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "amino/amino.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/milkyway-labs/milkyway/x/restaking/legacy/types";

// LegacyOperatorParams represent previous format that we where using to store
// a operator params.
message LegacyOperatorParams {

  // CommissionRate defines the commission rate charged to delegators, as a
  // fraction.
  string commission_rate = 1 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];

  // JoinedServicesIDs defines the list of service IDs that the operator has
  // joined.
  repeated uint32 joined_services_ids = 2
      [ (gogoproto.customname) = "JoinedServicesIDs" ];
}
